<resources>
    <string name="app_name">Project Task</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="usuario">Usuário:</string>
    <string name="write_your_user">Digite seu usuário</string>
    <string name="textPassword">Senha:</string>
    <string name="write_your_password">Digite sua senha</string>
    <string name="text_button_login">Entrar</string>
    <string name="text_button_cancelar">Cancelar</string>
    <string name="text_esqueceu_password">Esqueceu sua senha?</string>
    <string name="text_click_here">  Clique aqui.</string>
</resources>