<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.LoginFragment">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="262dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <!-- Campo de Usuário -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/usuario"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/write_your_user"
            android:imeOptions="actionNext"
            android:padding="10dp" />
    </LinearLayout>

    <!-- Campo de Senha -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/textPassword"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/write_your_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:padding="10dp" />
    </LinearLayout>


    <!-- Botões -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3ADD40"
        android:text="@string/text_button_login"
        app:cornerRadius="8dp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E82727"
        android:text="@string/text_button_cancelar"
        app:cornerRadius="8dp" />

    <!-- Esqueceu sua senha -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trocar senha?"
            android:textSize="16dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/clickHereText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="5dp"
            android:onClick="onForgotPasswordClick"
            android:text="@string/text_click_here"
            android:textSize="16dp"
            android:textColor="#1E90FF" />
    </LinearLayout>
</LinearLayout>
